modified backend config

--- a/back-end/Flicker/src/main/resources/application.properties
+++ b/back-end/Flicker/src/main/resources/application.properties
@@ -4,9 +4,15 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 #Datasource properties
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/flicker_chatapp?createDatabaseIfNotExist=true
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/flicker_chatapp?createDatabaseIfNotExist=true
+#spring.datasource.username=postgres
+#spring.datasource.password=admins
+
+spring.datasource.url=jdbc:postgresql://flickerdatabase.cf0c2gu02azs.ap-southeast-2.rds.amazonaws.com:5432/flicker_chatapp?createDatabaseIfNotExist=true
 spring.datasource.username=postgres
-spring.datasource.password=admins
+spring.datasource.password=postgresadmin
+
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 #JPA properties. Using ddl-auto = create will drop schema every-time.
