--- a/front-end/.env.local
+++ b/front-end/.env.local
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_BASE_URL=http://localhost:9014/api
-NEXT_PUBLIC_WEBSOCKET_STOMP_URL=ws://localhost:9014/messenger
+NEXT_PUBLIC_API_BASE_URL=http://ec2-3-27-172-63.ap-southeast-2.compute.amazonaws.com:9014/api
+NEXT_PUBLIC_WEBSOCKET_STOMP_URL=ws://ec2-3-27-172-63.ap-southeast-2.compute.amazonaws.com:9014/messenger
 NEXT_PUBLIC_ERROR_MESSAGE_DURATION=3000
 NEXT_PUBLIC_MODE="PRODUCT"
