--- a/back-end/Flicker/src/main/resources/application.properties
+++ b/back-end/Flicker/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/flicker_chatapp?createDatabaseIfNotExist=true
 spring.datasource.username=postgres
-spring.datasource.password=admins
+spring.datasource.password=admin
 
 #spring.datasource.url=jdbc:postgresql://flickerdatabase.cf0c2gu02azs.ap-southeast-2.rds.amazonaws.com:5432/flicker_chatapp?createDatabaseIfNotExist=true
 #spring.datasource.username=postgres
