message security feature

--- a/back-end/Flicker/src/main/resources/application.properties
+++ b/back-end/Flicker/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.datasource.password=admin
 #spring.datasource.username=postgres
 #spring.datasource.password=postgresadmin
 
+#spring.datasource.url=jdbc:postgresql://34.151.110.183:5432/flicker_chatapp?createDatabaseIfNotExist=true
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+
 
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
