--- a/back-end/Flicker/src/main/resources/application.properties
+++ b/back-end/Flicker/src/main/resources/application.properties
@@ -5,13 +5,13 @@ spring.servlet.multipart.max-request-size=20MB
 #Datasource properties
 spring.datasource.driverClassName=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/flicker_chatapp?createDatabaseIfNotExist=true
-spring.datasource.username=postgres
-spring.datasource.password=admins
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
-#spring.datasource.url=jdbc:postgresql://flickerdatabase.cf0c2gu02azs.ap-southeast-2.rds.amazonaws.com:5432/flicker_chatapp?createDatabaseIfNotExist=true
-#spring.datasource.username=postgres
-#spring.datasource.password=postgresadmin
+#spring.datasource.url=
+#spring.datasource.username=
+#spring.datasource.password=
 
 
 spring.datasource.testWhileIdle=true
@@ -43,10 +43,10 @@ app.cache.logoutToken.maxSize=1000
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.api-docs.path=/v3/api-docs
 #Google Translation API
-google.api.key=AIzaSyDCQJT3P9pgUbxc6f2z4pX4uJYlc2K2xWQ
-google.service.account.file=key/serviceAccountKey.json
-google.storage.bucket=flicker-2b72d.appspot.com
-google.firebase.database.url=https://flicker-2b72d-default-rtdb.asia-southeast1.firebasedatabase.app
+google.api.key=
+google.service.account.file=
+google.storage.bucket=
+google.firebase.database.url=
 #OpenAI
-openai.api.url=https://api.openai.com/v1/completions
-openai.api.key=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
+openai.api.url=
+openai.api.key=
