--- a/back-end/Flicker/src/main/resources/mail.properties
+++ b/back-end/Flicker/src/main/resources/mail.properties
@@ -2,8 +2,8 @@
 # https://support.google.com/accounts/answer/6010255?hl=en
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
-spring.mail.username=elec5619.group14@gmail.com
-spring.mail.password=landalduulgvqeuj
+spring.mail.username=
+spring.mail.password=
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.debug=true
